[tool.poetry]
name = "setlist-fm-stats"
version = "0.1.0"
description = "Enhanced stats using setlist-fm API"
authors = ["Dale Halford-Pearce"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
types-requests = "^2.28.8"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
